fixed border alignment

--- a/src/css/components/_books.scss
+++ b/src/css/components/_books.scss
@@ -1,6 +1,8 @@
 .books-list {
+  border-top: 2px solid white;
   grid-column: 2 / span 5;
   grid-row: 2 / span 1;
+  height: 60vh;
   overflow-x: scroll;
 }
 
