--- a/src/css/components/_library.scss
+++ b/src/css/components/_library.scss
@@ -6,7 +6,7 @@
 }
 
 .library__grid {
-  grid-auto-columns: calc(var(--max-width-1440px) / 6);
+  grid-auto-columns: repeat(6, minmax(0, 1fr));
   grid-template-rows: var(--map-height) minmax(0, 1fr);
 }
 
@@ -17,7 +17,7 @@
   grid-row: 2 / span 1;
   overflow-y: scroll;
   padding-bottom: 0;
-  scrollbar-width: 0;
+  scrollbar-width: none;
 }
 
 .library__library-card-grid {
@@ -35,10 +35,4 @@
   grid-auto-rows: max-content;
   grid-row-gap: 1rem;
   padding: 3rem 0;
-}
-
-.library__books-list {
-  border-top: 2px solid white;
-  overflow-x: scroll;
-  scrollbar-width: none; 
 }
