--- a/src/css/components/_search-results.scss
+++ b/src/css/components/_search-results.scss
@@ -2,7 +2,6 @@
 
 .search-results {
   background-color: #F2CA52;
-  height: 100vh;
 }
 
 .search-results__grid {
